[tool.poetry]
name = "astar-py"
version = "0.1.0"
description = "A* pure python packages with minimal dependancies. Provides various implementations for graph search."
authors = ["pi314ever <pilotflyer824@gmail.com>"]
readme = "README.md"
packages = [{include = "astar_py"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
