[tool.poetry]
name = "graph_search_py"
version = "0.1.0"
description = "A simple graph search library for Python."
authors = ["pi314ever <pilotflyer824@gmail.com>"]
readme = "README.md"
packages = [{include = "graph_search_py"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
